test/sema/compare-reference-to-null.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func main() {
    let i = 42;
    let p: int& = &i;
    // CHECK: [[@LINE+1]]:11: error: invalid operands to binary expression ('int&' and 'null')
    if (p == null) { }
}
